# object_detection_experiments

./: .gitignore  Dockerfile  README.md  build_docker.sh  get_dataset.ipynb  run_docker.sh  test_speed.ipynb
multispectral/: README.md  multispectral.py
panoptic/: README.md  panoptic.ipynb
rt-detr/: rt-detr.ipynb
rt-detr-cpp/: CMakeLists.txt  README.md
rt-detr-cpp/src/: main.cpp  test_speed.cpp
rt-detr/runs/detect/train/: args.yaml  results.csv
yolov11/: yolov11.ipynb
yolov11/runs/detect/train/: args.yaml  results.csv
yolov3/: yolov3.ipynb
yolov3/runs/detect/train/: args.yaml
yolov3/runs/detect/train2/: args.yaml
yolov3/runs/detect/train3/: args.yaml  results.csv
